--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "@nestjs/platform-express": "^9.0.0",
     "apollo-server-express": "^3.10.2",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.6",
+    "mongoose": "^6.5.3",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "rand-token": "^1.0.1",
